attempting to fix landing img misalignment pt iii

--- a/client/src/components/LandingBlock.css
+++ b/client/src/components/LandingBlock.css
@@ -93,7 +93,7 @@
     .landing-img {
         margin-left: -60vw;
         margin-top: -10vh;
-        width: 170vw;
-        height: 170vw;
+        width: 200vw;
+        height: 200vw;
     }
 }
